﻿## PLUXML 5.3.1 (sortie : xx/xx/2014) ##

BUG fix #46: Paramètre display_empty_cat non initialisé dans install.php
BUG fix #48: Erreur de parenthèse dans plxFeed sur instruction utf8_decode
BUG fix #53: plxShow::staticList : variable #static_class non traitée (contribution ReSpAwN)
BUG fix #54: Ajout commentaire: mauvais controle existence fichier (contribution rockyhorror)
BUG fix #55: Duplicate content avec page statique en page d'accueil (contribution Ethno Urban)
BUG fix #56: Mauvais tri alpha des tags avec des accents
BUG fix #57: Mauvais tri des répertoires dans le gestionnaire de médias (contribution rockyhorror)
BUG Mauvais chargement des fichiers de langues. Impact sur les plugins
Thème par défaut
- problème formatage balise <pre>
- affichage la sidebar sur la page d'erreur
- fix #45 problème balise blockquote
- fix #47 erreur format html5 balise <time>

## PLUXML 5.3 (sortie : 08/01/2014) ##

[+] Affichage du titre du site après le nom de la catégorie dans la balise <title> (amélioration du référencement)
[+] Administration: ajout d'un message de confirmation avant les suppressions en masse
[+] Administration: ajout d'un favicon
[+] Administration > Pages statiques: possibilité d'ajouter des urls internes commençant par le caractère ?
[+] Administration > Paramètres > Plugins: affichage d'un message d'information en rouge pour un plugin activé non configuré si requiert une configuration
[+] Administration > Paramètres > Plugins: ajout menu "Code css" pour gérer un fichier admin.css et site.css propre à chaque plugin (dans un dossier css du plugin)
[+) plxShow::artReadMore nouvelle fonction permettant d'afficher le lien "Lire la suite"
[+] plxShow::tagList ajout tri des tags par ordre alphabétique, random, aucun (alpha|random|'')
[+] plxShow::lastComList traduction oubliée (a dit)
[+] plxShow::staticList réécriture de la fonction pour mieux gérer l'affichage des groupes et permettre de faire des menus déroulants plus facilement